streamlit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      imagePullSecrets:
      - name: artifact-registry-secret
      containers:
      - name: streamlit
        image: $STREAMLIT_IMAGE
        ports:
          - containerPort: 8501
---

apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
spec:
  type: ClusterIP
  ports:
  - port: 8501
    targetPort: 8501
  selector:
    app: streamlit
